Thu Mar 31 09:45:07 2005  Boris Kolpackov  <boris@kolpackov.net>

	* CCF/CCF/IDL2/LexicalAnalyzer.cpp:
	* CCF/CCF/IDL2/Parser.cpp:
	* CCF/CCF/IDL2/Parser.hpp:
	* CCF/CCF/IDL2/SemanticAction/Attribute.hpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Attribute.cpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Attribute.hpp:
	* CCF/CCF/IDL2/SemanticGraph/Attribute.cpp:
	* CCF/CCF/IDL2/SemanticGraph/Attribute.hpp:
	* CCF/CCF/IDL2/Traversal/Attribute.cpp:
	* CCF/CCF/IDL2/Traversal/Attribute.hpp:
	* CIDLC/ExecutorMappingGenerator.cpp:

	Added support for raises-specification in attributes.

Wed Mar 30 21:48:14 2005  Nanbor Wang  <nanbor@cs.wustl.edu>

	* DAnCE/Config_Handlers/Deployment.hpp: Made the function
	  deploymentPlan an export function since it will be accessed
	  externally.  The handler test program needed this change to
	  compile on Win32.

	* DAnCE/Config_Handlers/Config_Handlers.mpc: Changed to source in
	  the Xerces library settings from the latest xerces MPC template
	  that Kitty suggested.

	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp:
	* DAnCE/Config_Handlers/ccd.hpp:
	* DAnCE/Config_Handlers/cdd.hpp:
	* DAnCE/Config_Handlers/cdp.hpp:
	* DAnCE/Config_Handlers/cid.hpp:
	* DAnCE/Config_Handlers/cpd.hpp:
	* DAnCE/Config_Handlers/iad.hpp:
	* DAnCE/Config_Handlers/pcd.hpp:
	* DAnCE/Config_Handlers/toplevel.hpp:
	* DAnCE/Config_Handlers/XMLSchema/Types.hpp:
	* DAnCE/Config_Handlers/XSCRT/Elements.hpp:
	* DAnCE/Config_Handlers/XSCRT/Parser.hpp:
	* DAnCE/Config_Handlers/XSCRT/Traversal.hpp:
	* DAnCE/Config_Handlers/XSCRT/Writer.hpp:
	* DAnCE/Config_Handlers/XSCRT/XML.hpp: Changed all local include
	  files to use the right syntax.  I.e., they should be in the form
	  of:

	    #include "foo/bar.h"

	  instead of

	    #include <foo/bar.h>

Wed Mar 30 22:03:23 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* docs/schema/xsc-banner.cpp
	* docs/schema/xsc-banner.h

	These files are the banners that should be included at
	the top of XSC generated code.
