@@ -1,3 +1,9 @@
+Thu Mar 31 20:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/ciao/NodeApplication_Impl.h:
+        * DAnCE/ciao/Container_Base.h:
+          Added missing include of ace/Hash_Map_Manager_T.h
+
 Thu Mar 31 09:45:07 2005  Boris Kolpackov  <boris@kolpackov.net>
 
 	* CCF/CCF/IDL2/LexicalAnalyzer.cpp:
